[package]
name = "stackoverflow-clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["sqlx_sqlite"]


[default.databases.stackoverflow]
url = "/Users/work/Documents/practice/rust/stackoverflow-clone/stackoverflow"
# [default.databases.rusqlite]
# url = "file:rusqlite?mode=memory&cache=shared"

# [default.databases.sqlx]
# url = "db/sqlx/db.sqlite"

# [default.databases.diesel]
# url = "db/diesel/db.sqlite"
# timeout = 10

# [default.databases.diesel_mysql]
# url = "mysql://user:password@127.0.0.1/database"
